Modified GitHub actions

--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -13,6 +13,9 @@ on:
   # Manual run
   workflow_dispatch:
 
+env:
+  BUILD_TYPE: Release
+
 jobs:
   # Build wheels for macOS, Linux, and Windows
   build_wheels:
