--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(CMGDB)
 # set(Boost_USE_STATIC_LIBS ON)
 
 cmake_policy(SET CMP0054 NEW)
+cmake_policy(SET CMP0127 NEW)
 
 # Visual Studio C++ does not support keywords such
 # as "and", "not", etc. Settting the /permissive-
@@ -19,8 +20,7 @@ endif(APPLE)
 
 add_subdirectory(pybind11)
 
-find_package(Boost REQUIRED thread)
-# find_package(Boost COMPONENTS chrono thread serialization REQUIRED)
+find_package(Boost COMPONENTS chrono thread serialization REQUIRED)
 
 message("Debug:")
 message("${Boost_INCLUDE_DIRS}")
@@ -32,17 +32,16 @@ if(Boost_FOUND)
   message(STATUS "Success!")
 endif()
 
-# include_directories (
-#   /usr/include
-#   /usr/local/include
-#   ${CMAKE_SOURCE_DIR}/include
-#   ${USER_INCLUDE_PATH}/database
-#   ${USER_INCLUDE_PATH} )
+include_directories (
+  /usr/local/include
+  ${Boost_INCLUDE_DIR}
+  ${CMAKE_SOURCE_DIR}/include
+  ${USER_INCLUDE_PATH}/database
+  ${USER_INCLUDE_PATH} )
 
-# link_directories (
-#   /usr/share/miniconda3/lib
-#   /usr/local/lib
-#   ${USER_LIBRARY_PATH} )
+link_directories (
+  /usr/local/lib
+  ${USER_LIBRARY_PATH} )
 
 # pybind11_add_module(_cmgdb src/CMGDB/_cmgdb/CMGDB.cpp)
 
