--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           vcpkg install eigen3
           vcpkg install gmp
+          vcpkg integrate install
         shell: pwsh
         if: runner.os == 'Windows'
 
