--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ endif(APPLE)
 add_subdirectory(pybind11)
 
 find_package(Boost COMPONENTS chrono thread serialization REQUIRED)
+find_package(gmp REQUIRED)
 
 message("Debug:")
 message("${Boost_INCLUDE_DIRS}")
