--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -26,8 +26,8 @@ jobs:
       # Build the other wheels even if one fails
       fail-fast: false
       matrix:
-        # os: [ubuntu-latest]
-        os: [windows-latest]
+        os: [ubuntu-latest]
+        # os: [windows-latest]
         # os: [windows-latest, ubuntu-18.04, macos-latest]
         # os: [windows-latest, ubuntu-latest, macos-latest]
         python: [37] # [36, 37, 38, 39]
@@ -43,12 +43,21 @@ jobs:
 
       - name: Install boost on Windows
         uses: MarkusJx/install-boost@v2.1.0
-        id: install-boost
+        id: install-boost-windows
         with:
           boost_version: 1.78.0
           platform_version: 2019
           toolset: msvc
         if: runner.os == 'Windows'
+
+      - name: Install boost on Linux
+        uses: MarkusJx/install-boost@v2.1.0
+        id: install-boost
+        with:
+          boost_version: 1.78.0
+          platform_version: 20.04
+          toolset: gcc
+        if: runner.os == 'Linux'
 
       - name: Install libraries on Windows
         run: |
@@ -65,6 +74,15 @@ jobs:
           ./install.sh
         shell: pwsh
         if: runner.os == 'Windows'
+
+      - name: Install libraries on Linux
+        run: |
+          sudo apt-get update
+          sudo apt-get install libeigen3-dev
+          sudo apt-get install libgmp-dev
+          sudo apt-get install libsdsl3
+        shell: bash
+        if: runner.os == 'Linux'
 
       # - name: Configure CMake
       #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
@@ -84,6 +102,7 @@ jobs:
           CIBW_BUILD: cp${{ matrix.python }}-*
           CIBW_ARCHS_WINDOWS: auto64
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+          # CMAKE_TOOLCHAIN_FILE: C:/vcpkg/scripts/buildsystems/vcpkg.cmake
           # CIBW_ENVIRONMENT: "BOOST_INCLUDE=${BOOST_ROOT}"
           # CIBW_ENVIRONMENT: Boost_INCLUDE_DIR=${BOOST_ROOT}/include
 
