--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -84,10 +84,10 @@ jobs:
         shell: bash
         if: runner.os == 'Linux'
 
-      # - name: Configure CMake
-      #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      #   env:
-      #     BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+      - name: Configure CMake
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
       # - name: Build
       #   run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
