--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,9 @@ find_package(Boost COMPONENTS chrono thread serialization REQUIRED)
 # find_package(gmp REQUIRED)
 
 message("Debug:")
-message("${Boost_INCLUDE_DIRS}")
-message("${Boost_LIBRARIES}")
+message("BOOST_ROOT IS ${BOOST_ROOT}")
+message("Boost_INCLUDE_DIR IS ${Boost_INCLUDE_DIR}")
+message("Boost_LIBRARIES IS ${Boost_LIBRARIES}")
 
 include_directories(${Boost_INCLUDE_DIRS})
 
@@ -46,9 +47,9 @@ link_directories (
   /usr/local/lib
   ${USER_LIBRARY_PATH} )
 
-pybind11_add_module(_cmgdb src/CMGDB/_cmgdb/CMGDB.cpp)
+# pybind11_add_module(_cmgdb src/CMGDB/_cmgdb/CMGDB.cpp)
 
-target_link_libraries(_cmgdb PRIVATE Boost::chrono Boost::thread Boost::serialization sdsl)
+# target_link_libraries(_cmgdb PRIVATE Boost::chrono Boost::thread Boost::serialization sdsl)
 
 # target_link_libraries (
 #   _cmgdb PRIVATE
@@ -57,8 +58,8 @@ target_link_libraries(_cmgdb PRIVATE Boost::chrono Boost::thread Boost::serializ
 #   Boost::serialization
 #   sdsl )
 
-# add_executable(test src/main.cpp)
+add_executable(test src/main.cpp)
 
-# target_link_libraries(test ${Boost_LIBRARIES})
+target_link_libraries(test ${Boost_LIBRARIES})
 
 # target_compile_definitions(test PRIVATE -DBOOST_NO_AUTO_PTR -DBOOST_ALL_NO_LIB)
