Modified GitHub actions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,11 @@ message("Boost_LIBRARIES IS ${Boost_LIBRARIES}")
 
 find_package(Boost COMPONENTS chrono thread serialization REQUIRED)
 
+message("Debug:")
+message("BOOST_ROOT IS ${BOOST_ROOT}")
+message("Boost_INCLUDE_DIR IS ${Boost_INCLUDE_DIR}")
+message("Boost_LIBRARIES IS ${Boost_LIBRARIES}")
+
 # CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
 # find_package(gmp REQUIRED)
 
