--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -84,27 +84,27 @@ jobs:
         shell: bash
         if: runner.os == 'Linux'
 
-      - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        env:
-          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-
-      - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
-      # - name: Install cibuildwheel
-      #   run: python -m pip install cibuildwheel
-
-      # - name: Build wheel
-      #   run:
-      #     python -m cibuildwheel --output-dir wheelhouse
+      # - name: Configure CMake
+      #   run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       #   env:
-      #     CIBW_BUILD: cp${{ matrix.python }}-*
-      #     # # CIBW_ARCHS_WINDOWS: auto64
       #     BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-      #     # CMAKE_TOOLCHAIN_FILE: C:/vcpkg/scripts/buildsystems/vcpkg.cmake
-      #     # CIBW_ENVIRONMENT: "BOOST_INCLUDE=${BOOST_ROOT}"
-      #     # CIBW_ENVIRONMENT: Boost_INCLUDE_DIR=${BOOST_ROOT}/include
+
+      # - name: Build
+      #   run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel
+
+      - name: Build wheel
+        run:
+          python -m cibuildwheel --output-dir wheelhouse
+        env:
+          CIBW_BUILD: cp${{ matrix.python }}-*
+          # # CIBW_ARCHS_WINDOWS: auto64
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+          # CMAKE_TOOLCHAIN_FILE: C:/vcpkg/scripts/buildsystems/vcpkg.cmake
+          # CIBW_ENVIRONMENT: "BOOST_INCLUDE=${BOOST_ROOT}"
+          # CIBW_ENVIRONMENT: Boost_INCLUDE_DIR=${BOOST_ROOT}/include
 
       # - name: Show files
       #   run: ls -lh wheelhouse
