Modified GitHub actions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.13)
+# cmake_minimum_required(VERSION 3.12)
 
 project(CMGDB)
 
@@ -20,7 +21,7 @@ endif(APPLE)
 
 add_subdirectory(pybind11)
 
-set(Boost_INCLUDE_DIR "/home/runner/work/CMGDB_temp3/CMGDB_temp3/boost/boost/include")
+# set(Boost_INCLUDE_DIR "/home/runner/work/CMGDB_temp3/CMGDB_temp3/boost/boost/include")
 
 message("Debug:")
 message("BOOST_ROOT IS ${BOOST_ROOT}")
