Modified GitHub actions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ message("BOOST_ROOT IS ${BOOST_ROOT}")
 message("Boost_INCLUDE_DIR IS ${Boost_INCLUDE_DIR}")
 message("Boost_LIBRARIES IS ${Boost_LIBRARIES}")
 
-set(Boost_ARCHITECTURE "-x64")
+set(Boost_ARCHITECTURE -x64)
 
 find_package(Boost COMPONENTS chrono thread serialization REQUIRED)
 
