Modified GitHub actions

--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -27,6 +27,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
+        os: [ubuntu-18.04]
         # os: [windows-latest]
         # os: [windows-latest, ubuntu-18.04, macos-latest]
         # os: [windows-latest, ubuntu-latest, macos-latest]
@@ -105,7 +106,7 @@ jobs:
 #          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
           # CMAKE_TOOLCHAIN_FILE: C:/vcpkg/scripts/buildsystems/vcpkg.cmake
 #          CIBW_ENVIRONMENT: BOOST_ROOT="${{ steps.install-boost.outputs.BOOST_ROOT }}"
-          CIBW_ENVIRONMENT_LINUX: Boost_ARCHITECTURE=-x64
+#          CIBW_ENVIRONMENT_LINUX: Boost_ARCHITECTURE=-x64
           # CIBW_ENVIRONMENT: "BOOST_INCLUDE=${BOOST_ROOT}"
           # CIBW_ENVIRONMENT: Boost_INCLUDE_DIR=${BOOST_ROOT}/include
 
