--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -26,7 +26,7 @@ jobs:
       # Build the other wheels even if one fails
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        # os: [ubuntu-latest]
         os: [ubuntu-18.04]
         # os: [windows-latest]
         # os: [windows-latest, ubuntu-18.04, macos-latest]
