--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -26,8 +26,8 @@ jobs:
       # Build the other wheels even if one fails
       fail-fast: false
       matrix:
-        # os: [ubuntu-latest]
-        os: [ubuntu-18.04]
+        os: [ubuntu-latest]
+        # os: [ubuntu-18.04]
         # os: [windows-latest]
         # os: [windows-latest, ubuntu-18.04, macos-latest]
         # os: [windows-latest, ubuntu-latest, macos-latest]
