--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -42,6 +42,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
 
+      - name: Setup cmake
+        uses: jwlawson/actions-setup-cmake@v1.9
+        with:
+          cmake-version: '3.16.x'
+
       - name: Install boost on Windows
         uses: MarkusJx/install-boost@v2.1.0
         id: install-boost-windows
