--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -56,14 +56,14 @@ jobs:
           toolset: msvc
         if: runner.os == 'Windows'
 
-      - name: Install boost on Linux
-        uses: MarkusJx/install-boost@v2.1.0
-        id: install-boost
-        with:
-          boost_version: 1.78.0
-          platform_version: 20.04
-          toolset: gcc
-        if: runner.os == 'Linux'
+      # - name: Install boost on Linux
+      #   uses: MarkusJx/install-boost@v2.1.0
+      #   id: install-boost
+      #   with:
+      #     boost_version: 1.78.0
+      #     platform_version: 20.04
+      #     toolset: gcc
+      #   if: runner.os == 'Linux'
 
       - name: Install libraries on Windows
         run: |
@@ -83,10 +83,14 @@ jobs:
 
       - name: Install libraries on Linux
         run: |
+          yum update
+          yum install boost boost-thread boost-devel
+          yum install eigen3-devel
+          yum install gmp-devel
           sudo apt-get update
-          # sudo apt-get install libboost-all-dev
-          sudo apt-get install libeigen3-dev
-          sudo apt-get install libgmp-dev
+          # # sudo apt-get install libboost-all-dev
+          # sudo apt-get install libeigen3-dev
+          # sudo apt-get install libgmp-dev
           sudo apt-get install libsdsl3
         shell: bash
         if: runner.os == 'Linux'
@@ -108,10 +112,10 @@ jobs:
         env:
           CIBW_BUILD: cp${{ matrix.python }}-*
           CIBW_ARCHS_WINDOWS: auto64
-          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+#          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
           # CMAKE_TOOLCHAIN_FILE: C:/vcpkg/scripts/buildsystems/vcpkg.cmake
 #          CIBW_ENVIRONMENT: BOOST_ROOT="${{ steps.install-boost.outputs.BOOST_ROOT }}"
-          CIBW_ENVIRONMENT: BOOST_INCLUDEDIR="${{ steps.install-boost.outputs.BOOST_ROOT }}/include"
+#          CIBW_ENVIRONMENT: BOOST_INCLUDEDIR="${{ steps.install-boost.outputs.BOOST_ROOT }}/include"
 #          CIBW_ENVIRONMENT_LINUX: Boost_ARCHITECTURE=-x64
           # CIBW_ENVIRONMENT: "BOOST_INCLUDE=${BOOST_ROOT}"
           # CIBW_ENVIRONMENT: Boost_INCLUDE_DIR=${BOOST_ROOT}/include
