Modified GitHub actions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ endif(APPLE)
 
 add_subdirectory(pybind11)
 
-set(BOOST_ROOT "/home/runner/work/CMGDB_temp3/CMGDB_temp3/boost/boost")
-set(BOOST_INCLUDEDIR "/home/runner/work/CMGDB_temp3/CMGDB_temp3/boost/boost/include")
+# set(BOOST_ROOT "/home/runner/work/CMGDB_temp3/CMGDB_temp3/boost/boost")
+# set(BOOST_INCLUDEDIR "/home/runner/work/CMGDB_temp3/CMGDB_temp3/boost/boost/include")
 
 message("Debug:")
 message("BOOST_ROOT IS ${BOOST_ROOT}")
