--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -83,15 +83,12 @@ jobs:
 
       - name: Install libraries on Linux
         run: |
-          yum update
-          yum install boost boost-thread boost-devel
-          yum install eigen3-devel
-          yum install gmp-devel
           sudo apt-get update
-          # # sudo apt-get install libboost-all-dev
-          # sudo apt-get install libeigen3-dev
-          # sudo apt-get install libgmp-dev
+          sudo apt-get install libboost-all-dev
+          sudo apt-get install libeigen3-dev
+          sudo apt-get install libgmp-dev
           sudo apt-get install libsdsl3
+          locate boost
         shell: bash
         if: runner.os == 'Linux'
 
