--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -88,7 +88,7 @@ jobs:
           sudo apt-get install libeigen3-dev
           sudo apt-get install libgmp-dev
           sudo apt-get install libsdsl3
-          locate boost
+          whereis boost
         shell: bash
         if: runner.os == 'Linux'
 
