Modified GitHub actions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,9 @@ add_subdirectory(pybind11)
 # set(BOOST_ROOT "/home/runner/work/CMGDB_temp3/CMGDB_temp3/boost/boost")
 # set(BOOST_INCLUDEDIR "/home/runner/work/CMGDB_temp3/CMGDB_temp3/boost/boost/include")
 
+set(BOOST_ROOT "/usr")
+set(BOOST_INCLUDEDIR "/usr/include")
+
 message("Debug:")
 message("BOOST_ROOT IS ${BOOST_ROOT}")
 message("Boost_INCLUDE_DIR IS ${Boost_INCLUDE_DIR}")
