--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -87,7 +87,7 @@ jobs:
           tar -xzf boost_1_69_0.tar.gz
           cd boost_1_69_0
           ./bootstrap.sh
-          ./b2 install -j4 --with-chrono --with-thread --with-serialization --with-date_time --with-atomic
+          sudo ./b2 install -j4 --with-chrono --with-thread --with-serialization --with-date_time --with-atomic
           # git clone https://github.com/simongog/sdsl-lite.git
           # cd sdsl-lite
           # export CFLAGS=-fPIC
