--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -26,9 +26,9 @@ jobs:
       # Build the other wheels even if one fails
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        # os: [ubuntu-latest]
         # os: [ubuntu-18.04]
-        # os: [windows-latest]
+        os: [windows-latest]
         # os: [windows-latest, ubuntu-18.04, macos-latest]
         # os: [windows-latest, ubuntu-latest, macos-latest]
         python: [37] # [36, 37, 38, 39]
@@ -49,7 +49,8 @@ jobs:
 
       - name: Install boost on Windows
         uses: MarkusJx/install-boost@v2.1.0
-        id: install-boost-windows
+        id: install-boost
+        # id: install-boost-windows
         with:
           boost_version: 1.78.0
           platform_version: 2019
