Modified GitHub actions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,9 @@ message("Boost_INCLUDE_DIR IS ${Boost_INCLUDE_DIR}")
 message("Boost_LIBRARIES IS ${Boost_LIBRARIES}")
 
 # CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
-# C:/vcpkg/packages/gmp_x86-windows/debug/lib/pkgconfig/gmpxx.pc
-# find_package(gmp REQUIRED)
+
+CMAKE_TOOLCHAIN_FILE=C:/vcpkg/packages/gmp_x86-windows/debug/lib/pkgconfig
+find_package(gmp REQUIRED)
 
 include_directories(${Boost_INCLUDE_DIRS})
 
