--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -71,8 +71,8 @@ jobs:
           vcpkg install eigen3
           vcpkg install gmp
           vcpkg integrate install
-          Get-ChildItem -Path D:\ -Include gmpxx.* -File -Recurse
-          Get-ChildItem -Path C:\ -Include gmpxx.* -File -Recurse
+          # Get-ChildItem -Path D:\ -Include gmpxx.* -File -Recurse
+          # Get-ChildItem -Path C:\ -Include gmpxx.* -File -Recurse
         shell: pwsh
         if: runner.os == 'Windows'
 
